--- a/frontend/src/components/Slider/Slider.css
+++ b/frontend/src/components/Slider/Slider.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
-  margin-bottom: 80px;
+  padding-bottom: 60px;
+  padding-top: 20px;
 }
 
 .slider {
